crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_368.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 1
- 112
- 1
- 13
- 0
- 0
- 2
- 2
- 65
- 0
- 0
- 0
- 248
- 255
- 0
- 0
- 0
